tests/golden/openshift/loki/loki/10_helm_loki/loki/templates/gateway/ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
    app.kubernetes.io/version: 3.6.7
    helm.sh/chart: loki-6.55.0
  name: loki-gateway
  namespace: syn-loki
spec:
  rules:
    - host: logs-receive.appuio.net
      http:
        paths:
          - backend:
              service:
                name: loki-gateway
                port:
                  number: 80
            path: /loki/api/v1/push
            pathType: Prefix
          - backend:
              service:
                name: loki-gateway
                port:
                  number: 80
            path: /otlp/v1/logs
            pathType: Prefix
  tls:
    - hosts:
        - logs-receive.appuio.net
      secretName: logs-receive-appuio-net-tls
