tests/golden/openshift/loki/loki/10_helm_loki/loki/templates/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
    app.kubernetes.io/version: 3.7.2
    helm.sh/chart: loki-17.4.11
  name: loki-gateway
  namespace: syn-loki
spec:
  rules:
    - host: logs-receive.appuio.net
      http:
        paths:
          - backend:
              service:
                name: loki-gateway
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - logs-receive.appuio.net
      secretName: logs-receive-appuio-net-tls
