tests/golden/openshift/loki/loki/10_helm_loki/loki/templates/gateway/service-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
    app.kubernetes.io/version: 3.7.2
    helm.sh/chart: loki-17.4.11
  name: loki-gateway-exporter
  namespace: syn-loki
spec:
  ports:
    - name: http-metrics
      port: 4040
      protocol: TCP
      targetPort: http-metrics
  selector:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
  type: ClusterIP
