tests/golden/openshift/loki/loki/10_helm_loki/loki/templates/gateway/serviceaccount.yaml
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
    app.kubernetes.io/version: 3.7.1
    helm.sh/chart: loki-13.5.0
  name: loki-gateway
  namespace: syn-loki
